with_sqlite = false

--- a/config/buffalo-app.toml
+++ b/config/buffalo-app.toml
@@ -2,7 +2,7 @@ name = "tic-tac-toe__api"
 bin = "bin"
 vcs = "git"
 with_pop = true
-with_sqlite = true
+with_sqlite = false
 with_dep = false
 with_webpack = false
 with_nodejs = false
